messages are now aligned, fixed whitelist, realigned votes

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -51,7 +51,7 @@ body, input, textarea {
   font-style: italic;
 }
 
-.idleSince {
+.idleSpan {
   font-size: 12px;
   color: #AAA;
   font-style: italic;
@@ -162,7 +162,6 @@ html, body {
 
   padding-top: 5px;
   padding-bottom: 10px;
-  
 }
 
 /* Input box */
@@ -225,8 +224,19 @@ html, body {
   text-align: left;
 }
 
+.vote a {
+  width: 8px;
+  text-align: center;
+  display: inline-block;
+}
+
 .vote .vote-display {
-  padding: 0 3px;
+  width: 16px; 
+  display: inline-block;
+  text-align: center;
+  font-weight: bold;
+
+  cursor: default;
 }
 
 .vote:hover .vote-plus {
@@ -259,6 +269,12 @@ html, body {
 .vote a {
   color: #fff;
   text-decoration: none;
+}
+
+/* Message Content */
+
+.messageContent .content {
+  margin-left: 42px;
 }
 
 /* Calendar */
@@ -370,7 +386,7 @@ hr {
   color: #000 !important;
 }
 
-.mention {
+.mention .content {
   background-color: #FFFFAA;
 }
 
